# jcc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
include/jcc/: allocator.h  ast_context.h  ast_node.h  codegen.h  common.h  decl.h  declarator.h  driver.h  expr.h  lexer.h  parser.h  source_location.h  stmt.h  token.h  type.h
src/: CMakeLists.txt  ast.cc  ast_context.cc  ast_node.cc  codegen.cc  decl.cc  driver.cc  lexer.cc  main.cc  parse.md  parser.cc  type.cc
test/: CMakeLists.txt  binary-add.c  call.c  continue.c  declaration.c  do-while.c  empty-param-func.c  if.c  run_test.sh  string-literal.c  struct.c  test_lexer.cc  union.c  while.c
test/codegen_tests/: call.c  for.c  if.c  puts.c  puts.out  run_tests.py  switch.c  while.c
test/parser_tests/: arith.c  arith.out  binary-add.c  binary-add.out  binary-op.c  binary-op.out  break.c  break.out  call.c  call.out  continue.out  declaration.c  declaration.out  do-while.out  empty-main.c  empty-main.out  empty-param-func.out  first.c  first.out  for.c  for.out  if.out  return-zero-func.out  run_tests.py  string-literal.out  struct.out  switch.c  switch.out  typedef.c  typedef.out  unary-op.c  unary-op.out  update_out.sh  while.out
unittest/: CMakeLists.txt  test_lexer.cc
